<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_portrait">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_of_snake"
        android:src="@drawable/snake_image_portrait"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/back_arrow"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_arrow"
        android:scaleType="centerInside"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/person_image"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/person_image"
        android:scaleType="centerInside"
        android:src="@drawable/portrait_image_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <GridLayout
        android:id="@+id/slots_grid"
        android:layout_width="272dp"
        android:layout_height="232dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="55dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/slots"
        android:columnCount="3"
        android:rowCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/balance_layout">

        <com.example.testtaskaztekky.slots.ImageViewScrolling
            android:id="@+id/image0"
           >

        </com.example.testtaskaztekky.slots.ImageViewScrolling>


        <com.example.testtaskaztekky.slots.ImageViewScrolling
            android:id="@+id/image1"
            android:layout_marginStart="4dp"
            >

        </com.example.testtaskaztekky.slots.ImageViewScrolling>

        <com.example.testtaskaztekky.slots.ImageViewScrolling
            android:id="@+id/image2"
            android:layout_marginStart="8dp"
            >

        </com.example.testtaskaztekky.slots.ImageViewScrolling>

        <com.example.testtaskaztekky.slots.ImageViewScrolling
            android:id="@+id/image3"
            >

        </com.example.testtaskaztekky.slots.ImageViewScrolling>

        <com.example.testtaskaztekky.slots.ImageViewScrolling
            android:id="@+id/image4"
            android:layout_marginStart="4dp"
            >

        </com.example.testtaskaztekky.slots.ImageViewScrolling>

        <com.example.testtaskaztekky.slots.ImageViewScrolling
            android:id="@+id/image5"
            android:layout_marginStart="8dp"
            >

        </com.example.testtaskaztekky.slots.ImageViewScrolling>

        <com.example.testtaskaztekky.slots.ImageViewScrolling
            android:id="@+id/image6"
            >

        </com.example.testtaskaztekky.slots.ImageViewScrolling>

        <com.example.testtaskaztekky.slots.ImageViewScrolling
            android:id="@+id/image7"
            android:layout_marginStart="4dp"
            >

        </com.example.testtaskaztekky.slots.ImageViewScrolling>

        <com.example.testtaskaztekky.slots.ImageViewScrolling
            android:id="@+id/image8"
            android:layout_marginStart="8dp"
            >

        </com.example.testtaskaztekky.slots.ImageViewScrolling>


    </GridLayout>


    <FrameLayout
        android:id="@+id/frame_rate"
        android:layout_width="338dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slots_grid"

        >

        <ImageView
            android:id="@+id/background_rate"
            android:layout_width="205dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/rate"
            android:scaleType="centerCrop"
            android:src="@drawable/rate_background" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/rate"
            android:scaleType="centerCrop"
            android:src="@drawable/rate_frame" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:adjustViewBounds="true"
            android:contentDescription="@string/rate"
            android:scaleType="centerCrop"
            android:src="@drawable/rate_frame" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="182dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/plus_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginStart="1dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="+"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minus_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:layout_marginStart="1dp"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="-"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/spin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/background_button_spin"
        android:gravity="center"
        android:text="SPIN"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_rate" />


    <FrameLayout
        android:id="@+id/balance_layout"
        android:layout_width="215dp"
        android:layout_height="80dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="210dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/person_image">

        <TextView
            android:id="@+id/balance"
            android:layout_width="182dp"
            android:layout_height="56dp"
            android:layout_gravity="center"
            android:background="@drawable/backgrpond_balance"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="start|top"
            android:adjustViewBounds="true"
            android:contentDescription="@string/frame"
            android:src="@drawable/frame_top_left" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="start|bottom"
            android:adjustViewBounds="true"
            android:contentDescription="@string/frame"
            android:src="@drawable/frame_bottom_left" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="end|top"
            android:adjustViewBounds="true"
            android:contentDescription="@string/frame"
            android:src="@drawable/frame_top_right" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="end|bottom"
            android:adjustViewBounds="true"
            android:contentDescription="@string/frame"
            android:src="@drawable/frame_right_bottom" />


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>



